--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools wheel
         pip install -r requirements.txt
-    - name: Test with pytest
+    - name: Run build
       run: |
         python build.py
+    - name: Update README.md
+      run: |
+        git add README.md
+        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config user.name "github-actions[bot]"
+        git commit -am "Automated readme update."
+        git push
