--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,10 @@ jobs:
     - name: Run build
       run: |
         python build.py
-    - name: Update README.md
+    - name: Update grid
       run: |
-        git add README.md
+        git add grid_image.png
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config user.name "github-actions[bot]"
-        git commit -am "Automated readme update."
+        git commit -am "Automated grid update."
         git push
