--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: gootsmoji build
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
 
 permissions:
@@ -14,30 +14,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip setuptools wheel
-        pip install -r requirements.txt
-    - name: Run build
-      run: |
-        python build.py
-    - name: Update grid
-      uses: dorny/paths-filter@v3
-        id: filter
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          filters: |
-            grid_image:
-              - 'grid_image.png'
-      if: github.ref == 'refs/heads/main'
-      if: steps.changes.outputs.grid_image == 'true'
-      run: |
-        git add grid_image.png
-        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git config user.name "github-actions[bot]"
-        git commit -am "Automated grid update."
-        git push
+          python-version: '3.12'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          pip install -r requirements.txt
+      - name: Run build
+        run: |
+          python build.py
+      - name: Update grid
+        if: github.ref == 'refs/heads/main'
+        with:
+          files: grid_image.png
+        run: |
+          git add grid_image.png
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git commit -am "Automated grid update."
+          git push
