--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
 
       # We want to always regen the grid file; GHA does not make skipping based on file changes easy.
       - name: Update grid image
+        if: github.ref == 'refs/heads/main'
         run: |
           python build.py
           git rm --cached grid_image.png
