--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ name: gootsmoji build
 on:
   push:
     branches: ["main"]
+    paths:
+      - goots/**
   pull_request:
 
 permissions:
@@ -25,10 +27,10 @@ jobs:
           python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
 
-      # We want to always regen the grid file; GHA does not make skipping based on file changes easy.
+      # GHA does not make skipping based on file changes easy.
+      # Trying to get the step to only run when grid_image.png changes.
       - name: Update grid image
         run: |
-          rm grid_image.png
           python build.py
           git add grid_image.png
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
