--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Update grid image
         run: |
           python build.py
-          git add grid_image.png
+          git add grid_image.png picker/index.html
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
-          git commit -am "Automated grid update."
+          git commit -am "Automatic Asset Rebuild"
           git push
