--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,22 +14,23 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirements.txt
+          uv sync
+
+      - name: Build Assets
+        run: |
+          uv run build.py
 
       - name: Update built assets
+        if: github.ref == 'refs/heads/main'
         run: |
-          python build.py
           if [[ -n "$(git status --porcelain)" ]]; then
             git config user.email '41898282+github-actions[bot]@users.noreply.github.com'
             git config user.name 'github-actions[bot]'
